--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- content begin -->
     <div id="content" class="no-bottom no-top">
       <!-- revolution slider begin -->
-      <section id="section-hero" class="fullwidthbanner-container" aria-label="section-slider" data-bgcolor="#101010">
+      <section id="section-hero" class="fullwidthbanner-container first_screen" aria-label="section-slider" data-bgcolor="#101010">
         <div id="slider-revolution">
           <ul>
             <li data-transition="random-premium" data-slotamount="10" data-masterspeed="200" data-thumb="">
@@ -187,7 +187,7 @@
             <br />
 
 
-
+<!-- 
             <div class="tp-caption tp-static-layer overflow:hidden" data-x="['center','center','center','center']"
               data-hoffset="['0']" data-y="['top','top','top','top']" data-voffset="['506']" data-width="none"
               data-height="none" data-type="button" data-responsive_offset="on" data-responsive="on" data-startslide="0"
@@ -198,26 +198,26 @@
               <div class="spacer20"></div>
               <div class="spacer20"></div>
               <div class="spacer20"></div>
-              <!--               <div class="spacer20"></div> -->
+                            <div class="spacer20"></div>
 
               <div class="apply-button"
                 data-hackathon-slug="vihaan-6-0" data-button-theme="dark-inverted" style="height: 44px; width: 312px;margin: 2rem;">
               </div>
 
-              <!--               devfolio btn-->
-              <!--               <div class="apply-button type-wrap resize-none md:resize scroll-to sm-hide" data-hackathon-slug="vihaan-6-0" data-button-theme="dark-inverted" style="height: 44px; width: 312px;"></div> -->
-              <!--               devfolio btn-->
+                             devfolio btn
+                             <div class="apply-button type-wrap resize-none md:resize scroll-to sm-hide" data-hackathon-slug="vihaan-6-0" data-button-theme="dark-inverted" style="height: 44px; width: 312px;"></div>
+                            devfolio btn
 
-              <!--             <div class="tp-caption tp-static-layer" data-x="['center','center','center','center']" data-hoffset="['0']"
+                        <div class="tp-caption tp-static-layer" data-x="['center','center','center','center']" data-hoffset="['0']"
               data-y="['top','top','top','top']" data-voffset="['506']" data-width="none" data-height="none"
               data-whitespace="nowrap" data-type="button" data-responsive_offset="on" data-responsive="off"
               data-startslide="0" data-endslide="3"
               data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":500,"ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255, 255, 255, 1.00);bg:rgba(255, 255, 255, 0.15);bw:2px 2px 2px 2px;"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[12,12,12,12]"
               data-paddingright="[20,20,20,20]" data-paddingbottom="[12,12,12,12]" data-paddingleft="[20,20,20,20]">
-            </div> -->
-
             </div>
+
+            </div> -->
           </div>
       </section>
 
@@ -264,7 +264,7 @@
               <div class="de-images">
                 <img class="di-small wow fadeIn" src="images/misc/2.jpg" alt="" />
                 <img class="di-small-2 wow fadeIn" src="images/misc/3.jpg" alt="" />
-                <img class="di-big img-fluid wow fadeInRight" data-wow-delay=".25s" src="images/misc/1.jpg" alt="" />
+                <img class="di-big img-fluid wow fadeInRight " data-wow-delay=".25s" src="images/misc/1.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -1362,13 +1362,13 @@
       <footer>
         <div class="container">
           <div class="row align-items-middle">
-            <div class="col-12 col-md-3 text-center mb-3">
+            <div class="col-12 col-md-3 text-center">
               <img src="images/logo.png" class="logo-small" style="width: 180px;" alt="" />
             </div>
-            <div class="col-12 col-md-6 text-center text-md-left" style="font-size: 20px;">
+            <div class="col-12 col-md-6 text-center text-md-left withlove" style="font-size: 20px;">
               &copy; Designed <span class="id-color">with ❤️</span> by Team IEEE DTU.
             </div>
-            <div class="col-12 col-md-3 text-center text-md-right">
+            <div class="col-12 col-md-3 text-center text-md-right withlove">
               <div class="social-icons custom-social-icons">
                 <a href="https://www.instagram.com/vihaan7.0/" target="_blank"><i
                     class="fa fa-instagram fa-lg" style="font-size: 24px; padding: 5px;"></i></a>
