--- a/index.html
+++ b/index.html
@@ -1119,10 +1119,13 @@
 
             <a href="https://gen.xyz/" target="_blank"><img src="./images/logo/xyz-logo-white (Custom).png"
                 style="width: 175px;" alt="XYZ LOGO" class="grey-hover"></a>&emsp;&emsp;&emsp;&emsp;
-            <a href="https://www.amazon.in/stores/PopSockets/PopSockets/page/9E642E35-7894-4F0E-B5B6-586BAF70BFE7?dplnk=Y&dplnkId=b15c0349-c841-4a08-a7bf-5a5e2c28ad12&ref=fs_google&ref_=cm_sw_r_apann_ast_store_5HGDADJZHQFW2W37KZVH"
-              target="_blank"><img src="./images/logo/PopSockets-circle-white-large.png" alt="POPSOCKET LOGO"
-                class="grey-hover" style="width: 175px;"></a>&emsp;&emsp;
-
+                <a href="https://www.amazon.in/stores/PopSockets/PopSockets/page/9E642E35-7894-4F0E-B5B6-586BAF70BFE7?dplnk=Y&dplnkId=b15c0349-c841-4a08-a7bf-5a5e2c28ad12&ref=fs_google&ref_=cm_sw_r_apann_ast_store_5HGDADJZHQFW2W37KZVH"
+                target="_blank"><img src="./images/logo/PopSockets-circle-white-large.png" alt="POPSOCKET LOGO"
+                  class="grey-hover" style="width: 175px;"></a>&emsp;&emsp;
+                  <a href="https://www.crac-learning.com/"
+                  target="_blank"><img src="./images/logo/LogoTransparentColor.png" alt="logo LOGO"
+                    class="grey-hover" style="width: 175px;"></a>&emsp;&emsp;
+      
                 <div class="spacer-single"></div>
                 <div class="spacer-single"></div>
                 <h1 style="font-size: 1.6rem;">Course Partners</h1>
